--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -27,8 +27,13 @@ header{
     }
     .links{
         a{
-            margin: 0 20px;
+            margin: 0 2em;
             font-size: 18px;
+        }
+    }
+    .social_net{
+        a{
+            margin: 0 1em;
         }
     }
 }
