--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,12 @@ header {
 }
 
 .header .links a {
-  margin: 0 20px;
+  margin: 0 2em;
   font-size: 18px;
+}
+
+.header .social_net a {
+  margin: 0 1em;
 }
 
 * {
