--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@
 }
 
 .intro_layer {
-  background-color: rgba(0, 0, 0, 0.2);
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(78, 52, 37, 0.1)), to(rgba(78, 52, 37, 0.1)));
+  background: linear-gradient(0deg, rgba(78, 52, 37, 0.1), rgba(78, 52, 37, 0.1));
   width: 100%;
   height: 100%;
 }
@@ -15,6 +16,75 @@
 header {
   width: auto;
   background: rgba(78, 52, 37, 0.4);
+}
+
+.order {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.order .order__item {
+  margin-top: 7em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-item-align: center;
+      align-self: center;
+  justify-self: center;
+  padding: 24px;
+  width: 500px;
+  background: rgba(78, 52, 37, 0.1);
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+}
+
+.order .order__item h1, .order .order__item h2 {
+  color: #e7c56b;
+  margin: 10px 0;
+}
+
+.order .order__item h1 {
+  font-size: 72px;
+  line-height: 84px;
+}
+
+.order .order__item h2 {
+  font-size: 40px;
+}
+
+.order .order__item p {
+  color: #fff;
+  line-height: 160%;
+}
+
+.order .order__item input {
+  border: 1px solid #fff;
+  padding: 10px;
+  margin: 10px 0;
+  color: rgba(241, 241, 241, 0.4);
+  background-color: transparent;
+  color: #fff;
+}
+
+.order .order__item .intro__order {
+  margin-top: 10px;
+  color: #000;
+  display: block;
+  padding: 10px 40px;
+  font-size: 20px;
+  background-color: #e7c56b;
+  border: none;
+  cursor: pointer;
 }
 
 .header {
@@ -31,7 +101,7 @@ header {
 }
 
 .header .logo {
-  font-size: 26px;
+  font-size: 65px;
 }
 
 .header .links a {
@@ -43,12 +113,266 @@ header {
   margin: 0 1em;
 }
 
+.feedback {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 5em;
+  margin-right: 5em;
+  margin-top: -2em;
+}
+
+.feedback .fb__item {
+  background-color: #e7c56b;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.feedback .fb__item img {
+  margin-top: 40px;
+  border: none;
+}
+
+.feedback .fb__item p {
+  padding: 50px;
+}
+
+.feedback .brdr {
+  border-left: 2px solid #4E3425;
+  border-right: 2px solid #4E3425;
+}
+
+.projects {
+  margin: 50px 0;
+}
+
+.projects h1 {
+  text-align: center;
+  margin: 20px;
+}
+
+.projects .slides {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#myCarousel {
+  margin: 20px 0;
+}
+
+.contact {
+  margin-top: 40px;
+  width: 100%;
+  height: 100vh;
+  background: url(../img/contacts-img.png) center no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.contact .contact__layer {
+  width: 100%;
+  height: 100%;
+  background: rgba(78, 52, 37, 0.3);
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+}
+
+.contact .contact__layer .contact__inner {
+  padding-top: 10%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+  color: #fff;
+}
+
+.contact .contact__layer .contact__inner .con__item {
+  margin: 80px auto;
+}
+
+.contact .contact__layer .contact__inner .con__item h2 {
+  margin: 0px 10px;
+  font-size: 40px;
+  font-weight: 400;
+}
+
+.contact .contact__layer .contact__inner .con__item p {
+  margin: 12px 10px;
+  font-size: 20px;
+  line-height: 32px;
+}
+
+.contact .contact__layer .contact__inner .con__item input {
+  color: #fff;
+  border: 1px solid #FFFFFF;
+  width: 450px;
+  height: 64px;
+  padding: 16px;
+  background-color: transparent;
+  outline: none;
+}
+
+.contact .contact__layer .contact__inner .con__item .contact__order {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 30px;
+  padding: 21px 59px;
+  background-color: #e7c56b;
+  color: #000;
+  font-size: 20px;
+  line-height: 23px;
+  text-transform: uppercase;
+  width: 450px;
+}
+
+.history {
+  margin: 20px 0;
+}
+
+.history h2 {
+  font-size: 40px;
+  line-height: 47px;
+  margin: 40px;
+  text-align: center;
+}
+
+.history .history__grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.history .history__grid h4 {
+  font-size: 24px;
+  line-height: 28px;
+  margin: 20px 0;
+}
+
+.location {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+}
+
+.location .map {
+  border: 1px solid #4e3425;
+}
+
+.location .loc__desc {
+  width: 676px;
+  height: 401px;
+  margin-left: -40px;
+  background: #E7C56B;
+  padding: 30px 100px 30px 40px;
+}
+
+.location .loc__desc h2 {
+  padding-bottom: 20px;
+}
+
+.about {
+  margin: 50px 0;
+}
+
+.about h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.about img {
+  width: 100%;
+  height: 100%;
+}
+
+.about p {
+  margin: 20px 100px;
+  color: #4e3425;
+  line-height: 32px;
+}
+
+footer {
+  background-color: #4e3425;
+  color: #fff;
+}
+
+footer .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 30px;
+}
+
+footer .footer img {
+  padding-right: 10px;
+  width: 32px;
+}
+
+footer .footer p {
+  padding: 20px 0;
+}
+
+footer .footer .logo {
+  font-size: 46px;
+}
+
+footer .footer .head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 20px;
+}
+
 * {
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+}
+
+body,
+html {
+  overflow-x: hidden;
 }
 
 a {
