--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -1,3 +1,6 @@
+$primary: rgba(78, 52, 37, 1);
+$secondary: rgba(231, 197, 107, 1);
+
 .intro{
     width: 100%;
     height: 100vh;
@@ -8,7 +11,9 @@
 }
 
 .intro_layer {
-    background-color: rgba(0, 0, 0, .2);
+    background: linear-gradient(0deg, 
+                rgba(78, 52, 37, 0.1), 
+                rgba(78, 52, 37, 0.1));
     width: 100%;
     height: 100%;
 }
@@ -17,23 +22,54 @@ header{
     background: rgba(78, 52, 37, 0.4);
 }
 
-.header{
-    display: flex;
-    justify-content: space-between;
+.order{
+    display: grid;
+    grid-template-columns: 1fr;
     align-items: center;
-    height: 80px;
-    .logo{
-        font-size: 26px;
-    }
-    .links{
-        a{
-            margin: 0 2em;
-            font-size: 18px;
+    text-align: center;
+    .order__item{
+        margin-top: 7em;
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        justify-self: center;
+        padding: 24px;
+        width: 500px;
+        background: rgba(78, 52, 37, 0.1);
+        backdrop-filter: blur(20px);
+        h1,h2{
+            color: rgba(231, 197, 107, 1);
+            margin: 10px 0;
         }
-    }
-    .social_net{
-        a{
-            margin: 0 1em;
+        h1{
+            font-size: 72px;
+            line-height: 84px;
+        }
+        h2{
+            font-size: 40px;
+        }
+        p{
+            color: #fff;
+            line-height: 160%;
+        }
+        input{
+            border: 1px solid #fff;
+            padding: 10px;
+            margin: 10px 0;
+            color: rgba(241, 241, 241, 0.4);
+            background-color: transparent;
+            color: #fff;
+        }
+        .intro__order{
+            margin-top: 10px;
+            color: #000;
+            display: block;
+            padding: 10px 40px;
+            font-size: 20px;
+            background-color: $secondary;
+            border: none;
+            cursor: pointer;
         }
     }
 }
+
