--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .intro {
   width: 100%;
-  height: 100vh;
+  height: 800px;
   background: url(../img/hero.png) center no-repeat;
   background-size: cover;
   background-attachment: fixed;
