--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -3,7 +3,7 @@ $secondary: rgba(231, 197, 107, 1);
 
 .intro{
     width: 100%;
-    height: 100vh;
+    height: 800px;
     background: url(../img/hero.png) center
     no-repeat;
     background-size: cover;
