--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,140 @@ header {
   line-height: 32px;
 }
 
+.menu-btn {
+  display: none;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border-radius: 50%;
+  position: relative;
+}
+
+.menu-btn span,
+.menu-btn span::before,
+.menu-btn span::after {
+  position: absolute;
+  top: 50%;
+  margin-top: -1px;
+  left: 50%;
+  margin-left: -10px;
+  width: 20px;
+  height: 2px;
+  background-color: #D6B369;
+}
+
+.menu-btn span::before,
+.menu-btn span::after {
+  content: '';
+  display: block;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.menu-btn span::before {
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
+}
+
+.menu-btn span::after {
+  -webkit-transform: translateY(5px);
+          transform: translateY(5px);
+}
+
+.menu-btn_active span {
+  height: 0;
+}
+
+.menu-btn_active span::before {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.menu-btn_active span::after {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.menu-block {
+  display: none;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  -webkit-transform-origin: left center;
+          transform-origin: left center;
+  -webkit-transform: scaleX(0) translateX(20%);
+          transform: scaleX(0) translateX(20%);
+  opacity: 0;
+}
+
+.menu-block a {
+  color: #D6B369;
+  padding: 20px;
+}
+
+.menu-block a {
+  border-bottom: 2px solid transparent;
+}
+
+.menu-block a:hover {
+  border-bottom: 2px solid #D6B369;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.menu-block_active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: #4e3425;
+  -webkit-transform: scaleX(1) translateX(0%);
+          transform: scaleX(1) translateX(0%);
+  opacity: 1;
+  -webkit-transition: 0.8s;
+  transition: 0.8s;
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  top: 80px;
+  left: 0;
+  z-index: 1;
+}
+
+@media only screen and (max-width: 768px) {
+  .header .logo {
+    font-size: 35px;
+  }
+  .header .links {
+    display: none;
+  }
+  .header .menu-btn {
+    display: block;
+    width: 50px;
+  }
+  .feedback {
+    max-width: 720px;
+  }
+  .feedback .fb__item img {
+    width: 48px;
+    height: 48px;
+  }
+  .feedback .fb__item p {
+    padding: 20px;
+  }
+  .contact .contact__layer .contact__inner {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .contact .contact__layer .contact__inner .con__item {
+    margin: 0 auto;
+  }
+}
+
 footer {
   background-color: #4e3425;
   color: #fff;
@@ -384,5 +518,21 @@ a {
   margin: 0;
   margin-left: 60px;
   margin-right: 60px;
+}
+
+::-webkit-input-placeholder {
+  color: #fff;
+}
+
+:-ms-input-placeholder {
+  color: #fff;
+}
+
+::-ms-input-placeholder {
+  color: #fff;
+}
+
+::placeholder {
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
