--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,9 @@
 @import "history";
 @import "location";
 @import "about";
+
+@import 'burger';
+@import "media";
 @import "footer";
 
 $primary: rgba(78, 52, 37, 1);
@@ -30,4 +33,8 @@ a{
     margin: 0;
     margin-left: 60px;
     margin-right: 60px;
+}
+
+::placeholder{
+    color: #fff;
 }
