--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ header {
 .contact {
   margin-top: 40px;
   width: 100%;
-  height: 100vh;
+  height: 600px;
   background: url(../img/contacts-img.png) center no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -191,7 +191,6 @@ header {
 }
 
 .contact .contact__layer .contact__inner {
-  padding-top: 10%;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
@@ -208,6 +207,7 @@ header {
 
 .contact .contact__layer .contact__inner .con__item {
   margin: 80px auto;
+  max-width: 450px;
 }
 
 .contact .contact__layer .contact__inner .con__item h2 {
@@ -279,6 +279,10 @@ header {
   font-size: 24px;
   line-height: 28px;
   margin: 20px 0;
+}
+
+.history .history__grid img {
+  width: 100%;
 }
 
 .location {
@@ -454,7 +458,14 @@ header {
         grid-template-columns: 1fr;
   }
   .contact .contact__layer .contact__inner .con__item {
-    margin: 0 auto;
+    margin: 10px auto;
+  }
+  .contact .contact__layer .contact__inner .con__item h2 {
+    font-size: 32px;
+    text-align: center;
+  }
+  .history .history__grid {
+    line-height: 1;
   }
 }
 
@@ -496,17 +507,14 @@ footer .footer .head {
   margin-top: 20px;
 }
 
-* {
+*,
+*::after,
+*::before {
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: "Roboto", sans-serif;
-}
-
-body,
-html {
-  overflow-x: hidden;
 }
 
 a {
