--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -38,9 +38,19 @@
                 grid-template-columns: 1fr ;
                 
                 .con__item{
-                    margin: 0 auto;
+                    margin: 10px auto;
+                    h2{
+                        font-size: 32px;
+                        text-align: center;
+                    }
                 }
             }
         }
     }
+    .history{
+        .history__grid{
+            line-height: 1;
+        }
+    }
+// END 768
 }
