--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -3,7 +3,7 @@ $secondary: rgba(231, 197, 107, 1);
 .contact{
     margin-top: 40px;
     width: 100%;
-    height: 100vh;
+    height: 600px;
     background: url(../img/contacts-img.png) center
     no-repeat;
     background-size: cover;
@@ -16,7 +16,6 @@ $secondary: rgba(231, 197, 107, 1);
         backdrop-filter: blur(15px);
 
         .contact__inner{
-            padding-top: 10%;
             display: grid;
             grid-template-columns: 1fr 1fr;
             justify-content: center;
@@ -25,6 +24,8 @@ $secondary: rgba(231, 197, 107, 1);
             color: #fff;
             .con__item{
                 margin: 80px auto;
+                max-width: 450px;
+                
                 h2{
                     margin: 0px 10px;
                     font-size: 40px;
