--- a/scss/_history.scss
+++ b/scss/_history.scss
@@ -15,5 +15,8 @@
             line-height: 28px;
             margin: 20px 0;    
         }
+        img{
+            width: 100%;
+        }
     }
 }
