--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,16 +15,15 @@ $primary: rgba(78, 52, 37, 1);
 $secondary: rgba(231, 197, 107, 1);
 $roboto: 'Roboto', sans-serif;
 
-*{
+*,
+*::after,
+*::before{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: $roboto;
 }
-body,
-html{
-    overflow-x: hidden;
-}
+
 a{
     text-decoration: none;
     color: #fff;
