--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -14,7 +14,6 @@ $secondary: rgba(231, 197, 107, 1);
         height: 100%;
         background: rgba(78, 52, 37, 0.3);
         backdrop-filter: blur(15px);
-
         .contact__inner{
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -57,7 +56,7 @@ $secondary: rgba(231, 197, 107, 1);
                     font-size: 20px;
                     line-height: 23px;
                     text-transform: uppercase;
-                    width: 450px;
+                    width: 28rem;
                 }
             }
         }
