--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,11 +1,11 @@
-@media only screen and (min-width: 375px) {
 
-}
-@media only screen and (min-width: 425px) {
+@media only screen and (max-width: 767px) and (min-width: 319px)   {
 
-}
-
-@media only screen and (max-width: 768px) {
+    header{
+        .container{
+            margin: 0 10px;
+        }
+    }
     .header{
         .logo{
             font-size: 35px;
@@ -13,14 +13,202 @@
         .links{
             display: none;
         }
+        .social_net{
+            display: none;
+        }
         
         .menu-btn{
             display: block;
             width: 50px;
         }
+        .social_net-menu{
+            display: block;
+
+        }
+    }
+
+    .intro{
+        width: 100%;
+        height: 600px;
+    }
+
+    .order{
+        p{
+            display: none;
+        }
+        input{
+            display: none;
+        }
+        .order__item {
+            margin-top: 10em;
+            display: flex;
+            flex-direction: column;
+            align-self: center;
+            justify-self: center;
+            padding: 24px;
+            width: auto;
+            background: unset;
+            backdrop-filter: unset;
+            h1{
+                font-size: 48px;
+                line-height: 84px;
+            }
+            h2{
+                font-size: 26px;
+            }
+            .intro-order{
+                height: 65px;
+            }
+        }
+    }
+
+    .contact{
+        height: auto;
+        .contact__layer{
+
+            .contact__inner{
+                margin: 15px;
+                height: auto;
+                .con__item{
+                    input{
+                        width: 282px;
+                        height: 64px;
+                    }
+                    .contact__order{
+                        width: 282px;
+                    }
+                }
+            }
+            
+        }
+    }
+    .history{
+        .container{
+            margin: 0 10px;
+        }
+        .history__grid{
+            grid-template-columns: 1fr;
+        }
+    }
+    
+    .feedback {
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: -2em;
+    }
+
+    .contact{
+        .contact__layer{
+            .contact__inner{
+                display: grid;
+                grid-template-columns: 1fr ;
+                
+                .con__item{
+                    margin: 10px auto;
+                    h2{
+                        padding-top: 20px;
+                        font-size: 32px;
+                        text-align: center;
+                    }
+                }
+            }
+        }
+    }
+    .location{
+        display: grid;
+        grid-template-columns: 1fr;
+        .map{
+            position: relative;
+            width: auto;
+            height: 365px;
+        }
+        .loc__desc{
+            position: relative;
+            width: auto;
+            height: auto;
+            padding: 20px;
+            top: 0;
+            height: 386px;
+        }
+    }
+
+    .about{
+        .container{
+            margin: 20px;
+        }
+        margin: 100px 20px;
+        h2{
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        p{
+            margin: 20px;
+        }
+    }
+
+    footer{
+        .container{       
+            .footer {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+
+            }
+        }
+    }
+    
+
+//320px - 767px
+}
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (min-width: 767px) {
+    .container{
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .header{
+        .logo{
+            font-size: 35px;
+        }
+        .links{
+            display: none;
+        }
+        .social_net{
+            display: block;
+        }
+        
+        .menu-btn{
+            display: none;
+        }
+    }
+    .order{
+        p{
+            display: block;
+        }
+        input{
+            display: block;
+        }
     }
     .feedback{
-        max-width: 720px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        align-items: center;
+        margin-left: 5em;
+        margin-right: 5em;
+        max-width: auto;
         .fb__item{
             img{
                 width: 48px;
@@ -34,12 +222,14 @@
     .contact{
         .contact__layer{
             .contact__inner{
+                padding-top: 50px;
                 display: grid;
-                grid-template-columns: 1fr ;
+                grid-template-columns: 1fr 1fr;
                 
                 .con__item{
                     margin: 10px auto;
                     h2{
+                        padding-top: 20px;
                         font-size: 32px;
                         text-align: center;
                     }
@@ -49,8 +239,94 @@
     }
     .history{
         .history__grid{
-            line-height: 1;
+            grid-template-columns: 1fr 1fr;
         }
     }
+    .location{
+
+        height: 700px;
+        .map{
+            width: 470px;
+            height: 34px;
+        }
+        .loc__desc{
+            width: 398px;
+            height: 350px;
+            top: 10px;
+            h2{
+                margin-bottom: 20px;
+            }
+        }
+        
+    }
+    
+    .about{
+        h2{
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        p{
+            margin: 20px 0;
+            color: $primary;
+            line-height: 32px;
+        }
+    }
+
 // END 768
+}
+
+
+@media only screen and (min-width: 768px) {
+    .header{
+        .logo{
+            font-size: 35px;
+        }
+        .links{
+            display: block;
+        }
+        .social_net{
+            display: block;
+        }
+    }
+    .about{
+        p{
+            margin: 20px 100px;
+            color: rgba(78, 52, 37, 1);
+            line-height: 32px;
+        }
+    }
+
+
+    .location{
+        position: relative;
+        width: 100%;
+        height: 687px;
+        margin-top: 100px;
+        .map{
+            position: absolute;
+            left: 0;
+            z-index: 1;
+            width: 58%;
+            height: 38rem;
+        }
+        .loc__desc{
+            position: absolute;
+            right: 0;
+            top: 120px;
+            z-index: 2;
+            width: 42rem;
+            height: 25rem;
+            background-color: $secondary;
+            padding: 20px;
+            h2{
+                margin-bottom: 3rem;
+            }
+            p{
+                font-size: 20px;
+                line-height: 160%;
+                padding-right: 20px;
+            }
+        }
+    }
+    
 }
