--- a/scss/_burger.scss
+++ b/scss/_burger.scss
@@ -46,7 +46,7 @@ $primary:#D6B369;
         color: $primary;
         padding: 20px;
     }
-    transition: 0.2s;
+    transition: 0.8s;
     transform-origin: left center;
     transform: scaleX(0) translateX(20%);
     opacity: 0;
@@ -67,11 +67,13 @@ $primary:#D6B369;
     transform: scaleX(1) translateX(0%);
     opacity: 1;
     transition: 0.8s;
+    animation-delay: 0.8s;
     position: absolute;
     width: 100%;
+    height: 800px;
+
     text-align: center;
     top: 80px;
     left: 0;
     z-index: 1;
-
 }
