--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,20 +1,32 @@
+header{
+    width: auto;
+    background: rgba(78, 52, 37, 0.4);
+    position: fixed;
+    width: 100%;
+    z-index: 100000;
+}
+.header-bg{
+    background: rgba(78, 52, 37, 1);
+    transition: 0.5s;
+}
 
 .header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-
     height: 80px;
+
     .logo{
         font-size: 65px;
     }
     .links{
         a{
-            margin: 0 2em;
+            margin: 0 20px;
             font-size: 18px;
         }
     }
     .social_net{
+        display: block;
         a{
             margin: 0 1em;
         }
