--- a/scss/_history.scss
+++ b/scss/_history.scss
@@ -10,6 +10,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 20px;
+        line-height: 160%;
         h4{
             font-size: 24px;
             line-height: 28px;
