--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -17,11 +17,6 @@ $secondary: rgba(231, 197, 107, 1);
     width: 100%;
     height: 100%;
 }
-header{
-    width: auto;
-    background: rgba(78, 52, 37, 0.4);
-}
-
 .order{
     display: grid;
     grid-template-columns: 1fr;
@@ -37,6 +32,7 @@ header{
         width: 500px;
         background: rgba(78, 52, 37, 0.1);
         backdrop-filter: blur(20px);
+        
         h1,h2{
             color: rgba(231, 197, 107, 1);
             margin: 10px 0;
@@ -62,7 +58,7 @@ header{
         }
         .intro__order{
             margin-top: 10px;
-            color: #000;
+            color: rgba(78, 52, 37, 1);
             display: block;
             padding: 10px 40px;
             font-size: 20px;
