--- a/scss/_location.scss
+++ b/scss/_location.scss
@@ -1,21 +1,39 @@
 $primary: rgba(78, 52, 37, 1);
 $secondary: rgba(231, 197, 107, 1);
 
+
+// @media only screen and (min-width: 767px) {}
+
+
 .location{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    position: relative;
+    width: 100%;
+    height: 700px;
+    margin-top: 100px;
+    margin-bottom: 50px;
     .map{
-        border: 1px solid $primary;
-        
+        position: absolute;
+        left: 0;
+        z-index: 1;
+        width: 58%;
+        height: 38rem;
     }
     .loc__desc{
-        width: 676px;
-        height: 401px;
-        margin-left: -40px;
-        background: #E7C56B;
-        padding: 30px 100px 30px 40px;
+        position: absolute;
+        right: 0;
+        top: 120px;
+        z-index: 2;
+        width: 42rem;
+        height: 25rem;
+        background-color: $secondary;
+        padding: 20px;
         h2{
-            padding-bottom: 20px;
+            margin-bottom: 3rem;
+        }
+        p{
+            font-size: 20px;
+            line-height: 160%;
+            padding-right: 20px;
         }
     }
 }
