--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,13 +1,70 @@
 .projects{
     margin: 50px 0;
+
     h1{
         text-align: center;
         margin: 20px;
     }
-    .slides{
-        display: flex;
-    }
 }
-#myCarousel{
-    margin: 20px 0;
+
+
+
+.carousel{
+    .preview{
+        width: 960px;
+        margin: 0 30px;
+        img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+    .slick-arrow{
+        position: absolute;
+        top: 50%;
+        display: block;
+        width: 40px;
+        height: 40px;
+        margin-top: -20px;
+        font-size: 0;
+        z-index: 10;
+        border: none;
+        background-color: #fff;
+        
+
+    }
+    .slick-prev{
+        position: absolute;
+        left: 45px;
+        background: url(../img/prev.svg) no-repeat;
+    }
+    .slick-next{
+        position: absolute;
+        right: 30px;
+        background: url(../img/next.svg) no-repeat;
+    }
+
+}
+
+.slick-dots{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    li{
+        list-style: none;
+        margin: 10px;
+    }
+    .slick-active button{
+        background-color: rgba(231, 197, 107, 1);
+        border: 1px solid rgba(78, 52, 37, 1);
+    }
+
+    button{
+        font-size: 0;
+        outline: 0;
+        width: 10px;
+        height: 10px;
+        border: none;
+        border-radius: 50%;
+        background-color: rgba(78, 52, 37, 1);
+    }
 }
