--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -36,7 +36,7 @@
         p{
             display: none;
         }
-        input{
+        .order-input{
             display: none;
         }
         .order__item {
@@ -56,10 +56,26 @@
             h2{
                 font-size: 26px;
             }
-            .intro-order{
+            .intro__order{
+                display: none;
+            }
+            #show{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                margin-top: 30px;
+                padding: 21px 59px;
+                background-color: $secondary;
+                color: #000;
+                font-size: 20px;
+                line-height: 23px;
+                text-transform: uppercase;
+                width: 280px;
                 height: 65px;
             }
         }
+
     }
 
     .contact{
