--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,7 @@ header {
   color: #000;
   background: #e7c56b;
   font-size: 20px;
+  width: 280px;
 }
 
 .feedback {
@@ -234,6 +235,7 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
 }
 
 .feedback .fb__item img {
@@ -461,7 +463,7 @@ header {
   top: 120px;
   z-index: 2;
   width: 42rem;
-  height: 25rem;
+  height: 20rem;
   background-color: #e7c56b;
   padding: 20px;
 }
@@ -700,9 +702,15 @@ header {
   .history .container {
     margin: 0 10px;
   }
-  .history .history__grid {
+  .history .container .history__grid {
+    display: -ms-grid;
+    display: grid;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
+    text-align: center;
+  }
+  .history .container .history__grid .hist__item img {
+    width: 90%;
   }
   .feedback {
     display: -ms-grid;
@@ -747,7 +755,6 @@ header {
     height: auto;
     padding: 20px;
     top: 0;
-    height: 386px;
   }
   .about {
     margin: 100px 20px;
