--- a/scss/_feedback.scss
+++ b/scss/_feedback.scss
@@ -13,6 +13,7 @@ $secondary: rgba(231, 197, 107, 1);
         display: flex;
         flex-direction: column;
         align-items: center;
+        text-align: center;
         img{
             margin-top: 40px;
             border: none;
