--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,11 +5,6 @@ header{
     width: 100%;
     z-index: 100000;
 }
-.header-bg{
-    background: rgba(78, 52, 37, 1);
-    transition: 0.5s;
-}
-
 .header{
     display: flex;
     justify-content: space-between;
@@ -17,7 +12,13 @@ header{
     height: 80px;
 
     .logo{
-        font-size: 65px;
+        display: block;
+        height: 80px;
+        width: 150px;
+        img{
+            width: 100%;
+            height: 100%;
+        }
     }
     .links{
         a{
